--- a/Drift/styles.css
+++ b/Drift/styles.css
@@ -63,25 +63,43 @@ body {
   font-size: .5em;
 }
 
+
 .pop-out {
     display: none;
     position: absolute;
     justify-content: center;
     top: 40%;
     left: 50%;
-    transform: translate(-50%, 0%);
+    transform: translate(-50%, -2%);
     font-family: 'ABCMaxiRoundVariable-Trial';
-    font-size: 2.5em;
-    width: 90vw;
-    height: 90vh;
+    font-size: 2.7em;
+    width: 95vw;
+    height: 92vh;
     color: black;
-    background-color: rgba(225, 250, 241, .8);
+    background-color: rgba(225, 250, 241, .95);
     overflow: auto;
     border: 2px solid black;
-    border-radius: 15px;
+    border-radius: 25px;
     padding: 20px;
     z-index: 9999;
 
+}
+
+.close {   
+  width: 35px;
+  height: 35px;
+  position: fixed;
+  top: 20px !important;
+  right: 20px !important;
+  padding-bottom: 5px;
+  padding-top: 3px;
+  text-align: center;
+  color: white;
+  background-color: black;
+  border: solid 2px;
+  border-radius: 5px;
+  font-family: 'ABCMaxiRoundVariable-Trial';
+  font-size: .5em;
 }
 
 .button01 {
@@ -104,7 +122,8 @@ body {
 
 .pop-header {
     display: flex;
-    justify-content: space-between;
+    justify-content: right;
+    align-items: flex-start;
 }
 
 h1{
@@ -113,4 +132,13 @@ h1{
     font-weight: 300;
     padding: 0;
     margin:0; 
+    top: 20px !important;
+    right: 20px !important;
+}
+
+.pop-text {
+  padding-top: 20px;
+  padding-bottom: 0px;    
+  padding-left: 20px;
+  padding-right: 20px;    
 }
