--- a/Drift/styles.css
+++ b/Drift/styles.css
@@ -73,54 +73,53 @@ body {
     display: none;
     position: absolute;
     justify-content: center;
-    top: 40%;
+    top: 85%;
     left: 50%;
     transform: translate(-50%, 10%);
     font-family: 'Favorit-Light';
-    font-size: 1.8em;
-    width: 65vw;
-    height: 60vh;
+    font-size: 1.8vmax;
+    width:65vw;
+    height: 55vh;
     color: black;
     background-color: rgba(225, 250, 241, .95);
     overflow: auto;
-    border: 2px solid black;
-    border-radius: 25px;
+    border: none;
+    border-radius: 5px;
     padding: 20px;
     z-index: 9999;
 
 }
 
 .close {   
-  width: 35px;
-  height: 35px;
+  width: 25px;
+  height: 25px;
+  display: flex;
   position: fixed;
-  top: 20px !important;
-  right: 20px !important;
-  padding-bottom: 5px;
-  padding-top: 3px;
+  margin-top: 0px;
+  margin-right: 10px;
   text-align: center;
-  color: white;
-  background-color: black;
-  border: solid 2px;
-  border-radius: 5px;
+  color: black;
+  background-color: transparent;
+  border: none;
+  border-radius: 7.5px;
   font-family: 'ABCMaxiRoundVariable-Trial';
-  font-size: .5em;
+  font-size: 1.2em;
 }
 
 .button01 {
-  width: 100px;
+  width: 50px;
   height: 50px;
   padding-bottom: 5px;
   padding-top: 3px;
   text-align: center;
   background-color: black;
   color: white;
-  border: 2px solid white;
-  border-radius: 15px;
-  font-size: 2em;
+  border: 1px solid black;
+  border-radius: 10px;
+  font-size: 2.2em;
   font-family: 'ABCMaxiRoundVariable-Trial';
   font-weight: 300;
-  margin: 5px 5px;
+  margin: 10px 10px;
   cursor: crosshair;
 }
 
@@ -129,6 +128,7 @@ body {
     display: flex;
     justify-content: right;
     align-items: flex-start;
+    z-index: -1;
 }
 
 h1{
@@ -142,8 +142,10 @@ h1{
 }
 
 .pop-text {
-  padding-top: 20px;
+  position: absolute;
+  padding-top: 10px;
   padding-bottom: 0px;    
   padding-left: 20px;
-  padding-right: 20px;    
+  padding-right: 40px;  
+  z-index: -3;  
 }
